<resources>
    <string name="app_name">Trashure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arahkan_ke">Arahkan ke QR code yang ada pada Trashbag</string>
    <string name="kode_qr">atau masukan kode ID Trashbag</string>
    <string name="masukkan_id">Masukkan ID</string>
    <string name="scan">Scan</string>
    <string name="sampah_terkumpul">Sampah Terkumpul</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="ket_id_trasbg">Trashbag ID</string>
    <string name="id_trasbg">1304A327FA</string>
    <string name="proses">Proses</string>
    <string name="setoran">Setoran</string>
    <string name="tips">Tips</string>
    <string name="tgl_setoran">24 / 04 / 2019</string>
    <string name="facebook_app_id">412402426152036</string>
    <string name="fb_login_protocol_scheme">fb412402426152036</string>
    <string-array name="desc">
        <item>Pulsa sebesar 1000 dengan nomor kartu</item>
        <item>Pulsa sebesar 5000 dengan nomor kartu</item>
        <item>Pulsa sebesar 10000 dengan nomor kartu</item>
        <item>Pulsa sebesar 20000 dengan nomor kartu</item>
        <item>Pulsa sebesar 50000 dengan nomor kartu</item>
    </string-array>
    <string name="berhasil_ditukar">berhasil ditukarkan. Sisa saldo anda sebesar Rp.</string>
    <string name="title_transaksi">Penukaran Pulsa</string>
    <string name="hint_scan">
        <font family="@font/sf_pro_display_regular">Masukkan ID</font>
    </string>
</resources>
