<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvItemListSetoran"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white">
        <ImageView
            android:id="@+id/iv_setoran"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/iv_trash"
            android:layout_marginVertical="17dp"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_setoran"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ket_id_trasbg"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_tb_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_trasbg"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_setoran_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tgl_setoran"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/setoran_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proses"
            android:textColor="@color/colorBtn"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
